# c-projects

./: README.md
c-dynamic/: linked_list.c  linked_list.h  main.c
calc/: main.c
pcap/: CMakeCache.txt  CMakeLists.txt  Makefile  capture.c  capture.h  capture.h.gch  cmake_install.cmake  demo  demo.c  nft  nft-tests  nft.c
pcap/tests/: tests-unit.c
perms/: CMakeLists.txt  assignment.ad  main.c  out.txt
perms/cmaketrash/: CMakeCache.txt  Makefile  checkperms  checkperms-tests  cmake_install.cmake
perms/data/: test-export.txt
perms/tests/: utils.c
structures/: CMakeLists.txt  main.c  structures.c  structures.h
xpath/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  in.txt  main.c  vector.c  vector.h  xparser.c  xparser.h  xpath  xpath.c  xpath.h
xpath/tests/: exitus.c  exitus.h  mainwrap.h  tests-nanecisto.c  tests.c  wmain.c
